@@ -1,3 +1,8 @@
+2013-10-19 Riccardo Mottola <rm@gnu.org>
+
+	* Source/NetBase.h
+	Defines for old Macs.
+
 2013-09-17 Riccardo Mottola <rm@gnu.org>
 
 	* Source/IRCObject.m
